fix: export code to proper places

--- a/animal-recognition-algorithm/Pipfile
+++ b/animal-recognition-algorithm/Pipfile
@@ -17,4 +17,4 @@ python_full_version = "3.11.8"
 [scripts]
 get_image_ids = "python scripts/save_image_ids.py"
 download_images = "python scripts/downloader.py 'data/image_ids.txt' --download_folder='data/images/lion' --num_processes=5"
-train_model = "python train_model.py"
+train_model = "python scripts/train_model.py"
