--- a/animal-recognition-algorithm/serverless.yml
+++ b/animal-recognition-algorithm/serverless.yml
@@ -1,6 +1,9 @@
 service: animal-recognizer
 frameworkVersion: "3"
 
+plugins:
+  - serverless-dotenv-plugin
+
 provider:
   name: aws
   runtime: python3.11
@@ -19,7 +22,7 @@ package:
 
 functions:
   animal-recognizer:
-    image: 271266592525.dkr.ecr.eu-west-1.amazonaws.com/animal-recognizer-lambda-image:latest
+    image: ${env:AWS_ACCOUNT_ID}.dkr.ecr.eu-west-1.amazonaws.com/animal-recognizer-lambda-image:latest
     timeout: 360
     memorySize: 3008
     architecture: arm64
