--- a/api/infrastructure/functions.yml
+++ b/api/infrastructure/functions.yml
@@ -1,12 +1,26 @@
 createFrame:
   handler: src/lambdas/http/post-frame.handler
-  # environment:
-  #   FRAME_TABLE: !Ref RoomTable
-  # iamRoleStatements:
-  #   - Effect: Allow
-  #     Action:
-  #       - dynamodb:PutItem
-  #     Resource: !GetAtt VisitEventStoreTable.Arn
+  environment:
+    FRAME_TABLE: !Ref FrameTable
+    BUCKET_NAME: !Ref Bucket
+    QUEUE_URL: !Ref FrameQue
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - dynamodb:PutItem
+      Resource: !GetAtt FrameTable.Arn
+    - Effect: Allow
+      Action:
+        - sqs:sendmessage
+      Resource: !GetAtt FrameQue.Arn
+    - Effect: Allow
+      Action:
+        - s3:PutObject
+      Resource:
+        Fn::Join:
+          - ""
+          - - !GetAtt Bucket.Arn
+            - "/*"
   events:
     - http:
         path: frames
