--- a/api/package.json
+++ b/api/package.json
@@ -21,11 +21,15 @@
     "ts-loader": "^9.5.1",
     "typescript": "^5.4.5",
     "webpack": "^5.91.0",
-    "webpack-node-externals": "^3.0.0"
+    "webpack-node-externals": "^3.0.0",
+    "@types/uuid": "^9.0.8"
   },
   "dependencies": {
     "aws-lambda": "^1.0.7",
     "joi": "^17.13.1",
-    "pino": "^9.0.0"
+    "pino": "^9.0.0",
+    "@aws-sdk/client-s3": "^3.569.0",
+    "@aws-sdk/client-sqs": "^3.568.0",
+    "uuid": "^9.0.1"
   }
 }
