--- a/animal-recognition-algorithm/package.json
+++ b/animal-recognition-algorithm/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
-    "serverless-dotenv-plugin": "^6.0.0"
+    "serverless-dotenv-plugin": "^6.0.0",
+    "serverless-iam-roles-per-function": "^3.2.0"
   }
 }
