fix: que visibility timeout and body parse

--- a/api/infrastructure/queues.yml
+++ b/api/infrastructure/queues.yml
@@ -1,3 +1,6 @@
 Resources:
   FrameQue:
     Type: AWS::SQS::Queue
+    Properties:
+      QueueName: ${self:custom.resourceSlug}-frame-queue
+      VisibilityTimeout: 360
