--- a/api/infrastructure/functions.yml
+++ b/api/infrastructure/functions.yml
@@ -25,7 +25,4 @@ createFrame:
     - http:
         path: frames
         method: post
-        # authorizer:
-        #   name: UserPoolAuthorizer
-        #   type: COGNITO_USER_POOLS
-        #   arn: !GetAtt CognitoUserPool.Arn
+        private: true
