--- a/user-interface/package.json
+++ b/user-interface/package.json
@@ -7,7 +7,7 @@
     "@aws-amplify/core": "^6.0.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@mui/material": "^5.15.17",
+    "@mui/material": "^5.15.18",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,6 +16,7 @@
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "amazon-cognito-identity-js": "^6.3.12",
+    "aws-amplify": "^6.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
