--- a/motion-detector/.gitignore
+++ b/motion-detector/.gitignore
@@ -1,1 +1,11 @@
+# Ignorowanie plików środowiskowych
+.env
+
+# Ignorowanie plików z konfiguracjami edytorów
+.vscode/
+.idea/
+
+# Ignorowanie plików kompilacji i środowisk wirtualnych
 __pycache__/
+*.pyc
+venv/
