--- a/user-interface/package.json
+++ b/user-interface/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.3.0",
     "amazon-cognito-identity-js": "^6.3.12",
     "aws-amplify": "^6.3.2",
+    "axios": "^1.6.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
